pinentry: upgrade to latest version from Debian Buster

--- a/p/pinentry/package.xml
+++ b/p/pinentry/package.xml
@@ -19,27 +19,24 @@
         </description>
 
         <sources>
-            <file src="pinentry-1.0.0.tar.bz2" subdir="sources"
-                sha256sum="1672c2edc1feb036075b187c0773787b2afd0544f55025c645a71b4c2f79275a"/>
-            <file src="patches.02.tar.gz" subdir="patches"
-                sha256sum="02e3a14c2f21f5f28118282724c58e90d845359a296fb323da24d2cff52dbfbf"/>
+            <file src="pinentry-1.1.0.tar.bz2" subdir="sources"
+                sha256sum="68076686fa724a290ea49cdf0d1c0c1500907d1b759a3bcbfbec0293e8f56570"/>
+            <file src="debian-patches-2.tar.gz" subdir="patches"
+                sha256sum="33eaeb65f4a974668f62d6d848c02cf87825c6b00eb29437666b0eaf1d2d6855"/>
         </sources>
-        
+
         <patches>
             <patchset subdir="sources">
                 <file src="patches/0001-avoid-self-describing-as-a-beta.patch"/>
-                <file src="patches/0002-Fix-linkage-problem-in-tty-and-emacs-pinentries.patch"/>
-                <file src="patches/0003-Fix-spelling-errors.patch"/>
-                <file src="patches/0004-gnome3-Fix-CONFIRM-condition.patch"/>
-                <file src="patches/0005-gnome3-Use-the-program-name-as-default-title.patch"/>
-                <file src="patches/0006-gtk2-Fix-a-problem-with-fvwm.patch"/>
                 <file src="patches/0007-gtk2-When-X11-input-grabbing-fails-try-again-over-0..patch"/>
+                <file src="patches/0003-Fix-format-string-errors-in-fltk-pinentry.patch"/>
+                <file src="patches/0004-gnome3-Use-the-default-dbus-timeout-when-checking-fo.patch"/>
+                <file src="patches/0005-gnome3-correctly-detect-when-no-GNOME-screenlock-exi.patch"/>
             </patchset>
         </patches>
 
         <requires>
             <package name="libassuan-dev" version=">= 2.1.0"/>
-            <package name="libgcr-3-dev"/>
             <package name="libglib2.0-dev" version=">= 2.15.5"/>
             <package name="libgpg-error-dev" version=">= 1.16"/>
             <package name="libncurses5-dev"/>
