python2.7: apply debian/patches from correct location

--- a/p/python2.7/package.xml
+++ b/p/python2.7/package.xml
@@ -28,58 +28,58 @@
                 <!-- Debian -->
                 <file src="patches/python2.7-2.7.16-2.debdiff"/>
 
-                <file src="patches/issue9189.diff"/>
-                <file src="patches/build-libpython.diff"/>
-                <file src="patches/deb-setup.diff"/>
-                <file src="patches/deb-locations.diff"/>
-                <file src="patches/site-locations.diff"/>
-                <file src="patches/distutils-install-layout.diff"/>
-                <file src="patches/locale-module.diff"/>
-                <file src="patches/distutils-link.diff"/>
-                <file src="patches/distutils-sysconfig.diff"/>
-                <file src="patches/test-sundry.diff"/>
-                <file src="patches/tkinter-import.diff"/>
-                <file src="patches/link-opt.diff"/>
-                <file src="patches/debug-build.diff"/>
-                <file src="patches/hotshot-import.diff"/>
-                <file src="patches/no-zip-on-sys.path.diff"/>
-                <file src="patches/platform-lsbrelease.diff"/>
-                <file src="patches/bdist-wininst-notfound.diff"/>
-                <file src="patches/setup-modules-ssl.diff"/>
-                <file src="patches/makesetup-bashism.diff"/>
-                <file src="patches/hurd-disable-nonworking-constants.diff"/>
-                <file src="patches/statvfs-f_flag-constants.diff"/>
-                <file src="patches/langpack-gettext.diff"/>
-                <file src="patches/issue9012a.diff"/>
-                <file src="patches/link-system-expat.diff"/>
-                <file src="patches/plat-gnukfreebsd.diff"/>
-                <file src="patches/link-whole-archive.diff"/>
-                <file src="patches/bsddb-libpath.diff"/>
-                <file src="patches/disable-sem-check.diff"/>
-                <file src="patches/ctypes-arm.diff"/>
-                <file src="patches/lto-link-flags.diff"/>
-                <file src="patches/multiarch.diff"/>
-                <file src="patches/lib2to3-no-pickled-grammar.diff"/>
-                <file src="patches/add-python-config-sh.diff"/>
-                <file src="patches/ext-no-libpython-link.diff"/>
-                <file src="patches/build-hash.diff"/>
-                <file src="patches/libffi-shared.diff"/>
-                <file src="patches/atomic-pyc-rename.diff"/>
-                <file src="patches/revert-unittest-loader-symlinks19352.diff"/>
-                <file src="patches/enable-sqlite-loadext.diff"/>
-                <file src="patches/installed-testsuite.diff"/>
-                <file src="patches/ensurepip-wheels.diff"/>
-                <file src="patches/ensurepip-disabled.diff"/>
-                <file src="patches/mangle-fstack-protector.diff"/>
-                <file src="patches/reproducible-buildinfo.diff"/>
-                <file src="patches/pydoc-use-pager.diff"/>
-                <file src="patches/issue27239.diff"/>
-                <file src="patches/rename-md5-init.diff"/>
-                <file src="patches/local-doc-references.diff"/>
-                <file src="patches/m-i-p-s-r6.diff"/>
-                <file src="patches/multiarch-libc.diff"/>
-                <file src="patches/issue36216.diff"/>
-                <file src="patches/issue35907.diff"/>
+                <file src="sources/debian/patches/issue9189.diff"/>
+                <file src="sources/debian/patches/build-libpython.diff"/>
+                <file src="sources/debian/patches/deb-setup.diff"/>
+                <file src="sources/debian/patches/deb-locations.diff"/>
+                <file src="sources/debian/patches/site-locations.diff"/>
+                <file src="sources/debian/patches/distutils-install-layout.diff"/>
+                <file src="sources/debian/patches/locale-module.diff"/>
+                <file src="sources/debian/patches/distutils-link.diff"/>
+                <file src="sources/debian/patches/distutils-sysconfig.diff"/>
+                <file src="sources/debian/patches/test-sundry.diff"/>
+                <file src="sources/debian/patches/tkinter-import.diff"/>
+                <file src="sources/debian/patches/link-opt.diff"/>
+                <file src="sources/debian/patches/debug-build.diff"/>
+                <file src="sources/debian/patches/hotshot-import.diff"/>
+                <file src="sources/debian/patches/no-zip-on-sys.path.diff"/>
+                <file src="sources/debian/patches/platform-lsbrelease.diff"/>
+                <file src="sources/debian/patches/bdist-wininst-notfound.diff"/>
+                <file src="sources/debian/patches/setup-modules-ssl.diff"/>
+                <file src="sources/debian/patches/makesetup-bashism.diff"/>
+                <file src="sources/debian/patches/hurd-disable-nonworking-constants.diff"/>
+                <file src="sources/debian/patches/statvfs-f_flag-constants.diff"/>
+                <file src="sources/debian/patches/langpack-gettext.diff"/>
+                <file src="sources/debian/patches/issue9012a.diff"/>
+                <file src="sources/debian/patches/link-system-expat.diff"/>
+                <file src="sources/debian/patches/plat-gnukfreebsd.diff"/>
+                <file src="sources/debian/patches/link-whole-archive.diff"/>
+                <file src="sources/debian/patches/bsddb-libpath.diff"/>
+                <file src="sources/debian/patches/disable-sem-check.diff"/>
+                <file src="sources/debian/patches/ctypes-arm.diff"/>
+                <file src="sources/debian/patches/lto-link-flags.diff"/>
+                <file src="sources/debian/patches/multiarch.diff"/>
+                <file src="sources/debian/patches/lib2to3-no-pickled-grammar.diff"/>
+                <file src="sources/debian/patches/add-python-config-sh.diff"/>
+                <file src="sources/debian/patches/ext-no-libpython-link.diff"/>
+                <file src="sources/debian/patches/build-hash.diff"/>
+                <file src="sources/debian/patches/libffi-shared.diff"/>
+                <file src="sources/debian/patches/atomic-pyc-rename.diff"/>
+                <file src="sources/debian/patches/revert-unittest-loader-symlinks19352.diff"/>
+                <file src="sources/debian/patches/enable-sqlite-loadext.diff"/>
+                <file src="sources/debian/patches/installed-testsuite.diff"/>
+                <file src="sources/debian/patches/ensurepip-wheels.diff"/>
+                <file src="sources/debian/patches/ensurepip-disabled.diff"/>
+                <file src="sources/debian/patches/mangle-fstack-protector.diff"/>
+                <file src="sources/debian/patches/reproducible-buildinfo.diff"/>
+                <file src="sources/debian/patches/pydoc-use-pager.diff"/>
+                <file src="sources/debian/patches/issue27239.diff"/>
+                <file src="sources/debian/patches/rename-md5-init.diff"/>
+                <file src="sources/debian/patches/local-doc-references.diff"/>
+                <file src="sources/debian/patches/m-i-p-s-r6.diff"/>
+                <file src="sources/debian/patches/multiarch-libc.diff"/>
+                <file src="sources/debian/patches/issue36216.diff"/>
+                <file src="sources/debian/patches/issue35907.diff"/>
 
                 <!-- Bolt OS -->
                 <file src="patches/musl-find-library.diff"/>
